1、添加暂停恢复功能 2、修改TextureView销毁stop后有可能导致崩溃的BUG 3、修复播放帧数过快，来不及读取而导致的播放停止问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="如果是透明的你应该能看到我" />
+        android:text="@string/back_text" />
 
     <com.xiuyukeji.pictureplayerview.PicturePlayerView
         android:id="@+id/player"
@@ -48,5 +48,15 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_toLeftOf="@id/start"
+        app:srcCompat="@android:drawable/ic_media_pause" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_toLeftOf="@id/stop"
         app:srcCompat="@android:drawable/ic_media_pause" />
 </RelativeLayout>
