--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,22 +53,22 @@
         app:srcCompat="@drawable/ic_play_arrow_white_24dp" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/fab_margin"
-        android:layout_marginRight="@dimen/fab_margin"
-        app:layout_constraintBottom_toBottomOf="@+id/player"
-        app:layout_constraintRight_toLeftOf="@+id/start"
-        app:srcCompat="@drawable/ic_stop_white_24dp" />
-
-    <android.support.design.widget.FloatingActionButton
         android:id="@+id/pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         app:layout_constraintBottom_toBottomOf="@+id/player"
-        app:layout_constraintRight_toLeftOf="@+id/stop"
+        app:layout_constraintRight_toLeftOf="@+id/start"
         app:srcCompat="@drawable/ic_pause_white_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        app:layout_constraintBottom_toBottomOf="@+id/player"
+        app:layout_constraintRight_toLeftOf="@+id/pause"
+        app:srcCompat="@drawable/ic_stop_white_24dp" />
 </android.support.constraint.ConstraintLayout>
