1、修改调度器跳帧逻辑 2、图片播放器默认跳帧 3、修改3个实力的rect创建问题 4、添加cacheList，同时添加单元测试

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/barLayout"
-        app:opaque="false"
-        app:source="assets" />
+        app:picture_opaque="false"
+        app:picture_source="assets" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/start"
