1、修改部分代码构建 2、所有页面添加fps显示 3、重构PicturePlayer，分离为PicturePlayer（负责播放线程控制）和PictureRenderer（负责图像绘制） 4、添加GLTextureView实现实例 5、添加GLActivity页面

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,4 +22,9 @@
         android:orderInCategory="100"
         android:title="@string/action_step4"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_gl"
+        android:orderInCategory="100"
+        android:title="@string/action_gl"
+        app:showAsAction="never" />
 </menu>
