--- a/app/src/main/res/layout/activity_gl.xml
+++ b/app/src/main/res/layout/activity_gl.xml
@@ -31,7 +31,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/barLayout" />
 
-    <com.xiuyukeji.pictureplayerview.PicturePlayerView
+    <com.xiuyukeji.glpictureplayerview.GLPicturePlayerView
         android:id="@+id/player"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
