--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,28 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_step1"
+        android:id="@+id/action_none"
         android:orderInCategory="100"
-        android:title="@string/action_step1"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_step2"
-        android:orderInCategory="100"
-        android:title="@string/action_step2"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_step3"
-        android:orderInCategory="100"
-        android:title="@string/action_step3"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_step4"
-        android:orderInCategory="100"
-        android:title="@string/action_step4"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_gl"
-        android:orderInCategory="100"
-        android:title="@string/action_gl"
+        android:title="@string/action_none"
         app:showAsAction="never" />
 </menu>
