1、添加seek方法 2、修改player的停止顺序，修改为由播放线程完成后在退出读取线程，配合seek方法，防止出现停止读取BUG 3、添加seek演示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,13 @@
         app:layout_constraintBottom_toBottomOf="@+id/player"
         app:layout_constraintRight_toLeftOf="@+id/pause"
         app:srcCompat="@drawable/ic_stop_white_24dp" />
+
+    <SeekBar
+        android:id="@+id/seek"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/seek_margin"
+        app:layout_constraintBottom_toBottomOf="@+id/player"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/stop" />
 </android.support.constraint.ConstraintLayout>
