1、修复在第一次播放的情况下调用SeekTo会导致无法播放的问题 2、修改NoticeHandler的Listener判断时机防止出现因为Stop回调是Handler的情况下出现后注册的Listener被调用的问题 3、添加Release方法，用于退出页面接触回调防止有可能出现的内存泄漏问题 4、修改版本号为0.1.2

--- a/pictureplayerview/src/main/res/values/attrs.xml
+++ b/pictureplayerview/src/main/res/values/attrs.xml
@@ -4,6 +4,8 @@
         <attr name="picture_loop" format="boolean" />
         <attr name="picture_opaque" format="boolean" />
         <attr name="picture_antiAlias" format="boolean" />
+        <attr name="picture_filterBitmap" format="boolean" />
+        <attr name="picture_dither" format="boolean" />
         <attr name="picture_source">
             <enum name="file" value="0" />
             <enum name="assets" value="1" />
